# minireqs

./: .gitignore  README.md  pyproject.toml  req-init.txt
.github/workflows/: publish.yml
src/minireqs/: helpers.py  pip_package_extract.py
